fix alignment of nested requirements on DMP Details page

--- a/app/assets/stylesheets/ui.css
+++ b/app/assets/stylesheets/ui.css
@@ -126,6 +126,7 @@ ul.nav-tabs li.active > a:hover, .tabs ul.nav-tabs li.active a:focus {
 	margin: 0; }
 .requirements-tree-view ul > li {
 	position: relative;
+	margin-top: 10px;
 	margin-bottom: 10px;
 	/* padding-right: 65px; */ }
 .requirements_group {
